--- a/coffee shop project/coffee shop project/coffee shop project.csproj
+++ b/coffee shop project/coffee shop project/coffee shop project.csproj
@@ -72,6 +72,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Regis_Customer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Regis_Customer.Designer.cs">
+      <DependentUpon>Regis_Customer.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="add_products.resx">
       <DependentUpon>add_products.cs</DependentUpon>
     </EmbeddedResource>
@@ -87,6 +93,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Regis_Customer.resx">
+      <DependentUpon>Regis_Customer.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
