--- a/coffee shop project/coffee shop project/coffee shop project.csproj
+++ b/coffee shop project/coffee shop project/coffee shop project.csproj
@@ -78,6 +78,12 @@
     <Compile Include="Regis_Customer.Designer.cs">
       <DependentUpon>Regis_Customer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Staff_login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Staff_login.Designer.cs">
+      <DependentUpon>Staff_login.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="add_products.resx">
       <DependentUpon>add_products.cs</DependentUpon>
     </EmbeddedResource>
@@ -95,6 +101,9 @@
     </Compile>
     <EmbeddedResource Include="Regis_Customer.resx">
       <DependentUpon>Regis_Customer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Staff_login.resx">
+      <DependentUpon>Staff_login.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
